--- a/TPO/src/edu/uade/ia/tpo/view/PatientDataContentPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/PatientDataContentPane.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="edu.uade.ia.tpo.view.PatientDataContentPane">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="21" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="view" layout-manager="GridLayoutManager" row-count="21" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="5" bottom="20" right="5"/>
     <constraints>
       <xy x="20" y="20" width="749" height="686"/>
@@ -98,7 +98,7 @@
           <text value="Relacion Familiar"/>
         </properties>
       </component>
-      <component id="24d43" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="24d43" class="javax.swing.JTextField" binding="familyRelation">
         <constraints>
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -123,13 +123,13 @@
           <text value="Nivel de Estudios"/>
         </properties>
       </component>
-      <component id="f70f1" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="f70f1" class="javax.swing.JComboBox" binding="sex">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="d4eb3" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+      <component id="d4eb3" class="javax.swing.JComboBox" binding="studyLevel">
         <constraints>
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -220,7 +220,7 @@
           <text value="Edad"/>
         </properties>
       </component>
-      <component id="40ce5" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="40ce5" class="javax.swing.JTextField" binding="age">
         <constraints>
           <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -228,7 +228,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="791b6" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="791b6" class="javax.swing.JTextField" binding="profession">
         <constraints>
           <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -236,7 +236,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="173b9" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="173b9" class="javax.swing.JTextField" binding="work">
         <constraints>
           <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -244,7 +244,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9f79f" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+      <component id="9f79f" class="javax.swing.JTextField" binding="hobbies">
         <constraints>
           <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -252,7 +252,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="2e527" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+      <component id="2e527" class="javax.swing.JTextField" binding="tastes">
         <constraints>
           <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
