--- a/TPO/src/edu/uade/ia/tpo/view/PatientExamContentPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/PatientExamContentPane.form
@@ -18,17 +18,9 @@
       </component>
       <vspacer id="37a06">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="697" class="javax.swing.JList" binding="symptomList">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="6de12" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -59,6 +51,19 @@
           <text value="Cancelar"/>
         </properties>
       </component>
+      <scrollpane id="19374">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="697" class="javax.swing.JList" binding="symptomList">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
