add readme and view

--- a/TPO/src/edu/uade/ia/tpo/view/PatientExamContentPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/PatientExamContentPane.form
@@ -154,7 +154,9 @@
                     <preferred-size width="200" height="50"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="false"/>
+                </properties>
               </component>
             </children>
           </grid>
