--- a/TPO/src/edu/uade/ia/tpo/view/MainActionsPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/MainActionsPane.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="edu.uade.ia.tpo.view.MainActionsPane">
-  <grid id="27dc6" binding="view" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="view" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
       <xy x="20" y="20" width="905" height="610"/>
@@ -22,6 +22,14 @@
         </constraints>
         <properties>
           <text value="Evaluar Paciente"/>
+        </properties>
+      </component>
+      <component id="4cfbd" class="javax.swing.JButton" binding="registroDeActividadesButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Registro de Actividades"/>
         </properties>
       </component>
     </children>
