--- a/TPO/src/edu/uade/ia/tpo/view/ActivityLogContentPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/ActivityLogContentPane.form
@@ -16,16 +16,6 @@
           <text value="Registro de Actividades"/>
         </properties>
       </component>
-      <component id="2f8f3" class="javax.swing.JTextArea" binding="activityLog">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <editable value="false"/>
-        </properties>
-      </component>
       <component id="5202e" class="javax.swing.JButton" binding="volverButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -34,6 +24,21 @@
           <text value="Volver"/>
         </properties>
       </component>
+      <scrollpane id="41b43">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="2f8f3" class="javax.swing.JTextArea" binding="activityLog">
+            <constraints/>
+            <properties>
+              <editable value="false"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
