--- a/TPO/src/edu/uade/ia/tpo/view/PatientExamContentPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/PatientExamContentPane.form
@@ -158,6 +158,7 @@
             </constraints>
             <properties>
               <editable value="false"/>
+              <lineWrap value="true"/>
             </properties>
           </component>
         </children>
