--- a/TPO/src/edu/uade/ia/tpo/view/ActivityLogContentPane.form
+++ b/TPO/src/edu/uade/ia/tpo/view/ActivityLogContentPane.form
@@ -35,6 +35,7 @@
             <constraints/>
             <properties>
               <editable value="false"/>
+              <lineWrap value="true"/>
             </properties>
           </component>
         </children>
